<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_reco"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/reco_menu"
            />

        <TextView
            android:id="@+id/welcoming_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_reco"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/sign_up_now"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            />
        <TextView
            android:id="@+id/click_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcoming_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/click_the_button"
            android:textColor="@color/gray"
            android:textSize="20sp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/label_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />

    <com.kotlin.learn.myapplication.ui.customview.EditTextEmail
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auth"
        android:textColorHint="@color/secondary"/>

    <com.kotlin.learn.myapplication.ui.customview.EditTextPassword
        android:id="@+id/editTextTextPassword"
        android:layout_width="900dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:textColorHint="@color/secondary"/>

    <Button
        android:id="@+id/btn_action_sign_up"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_sign_in_button"
        android:text="@string/sign_up_button"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>