<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.member.MembersOfferFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_members_offer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="600dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/iv_recomenu_member1"
            android:layout_width="228dp"
            android:layout_height="match_parent"
            android:src="@drawable/reco_menu" />

        <TextView
            android:id="@+id/tv_members_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv1_reco_menu_member"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_members_offer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_action_daftar_member"
        app:layout_constraintTop_toBottomOf="@id/cv_members_offer1"
        tools:layout_editor_absoluteX="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_keuntungan_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keuntungan_members_offer"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_benefit_rekomendasi_menu"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_benefit_diskon_menarik"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_benefit_potongan_cashback"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_action_daftar_member"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/custom_sign_in_button"
        android:text="@string/btn_daftar_member"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:transitionName="action"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="64dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:itemIconSize="40dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="4dp"
        android:focusable="false"
        app:itemTextColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />


</androidx.constraintlayout.widget.ConstraintLayout>